manifests/20-service-nginx.yaml
apiVersion: v1
kind: Service
metadata:
  name: s4-nginx
  namespace: workshop
spec:
  selector:
    app: s4-nginx
  ports:
  - port: 80
    targetPort: 80
