manifests/service-api.yaml

apiVersion: v1
kind: Service
metadata:
  name: api
  namespace: workshop
spec:
  selector:
    app: api
  type: NodePort
  ports:
    - port: 80
      targetPort: 8080
      nodePort: 30000
