manifests/30-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: s4-ingress
  namespace: workshop
  annotations:
    kubernetes.io/ingress.class: nginx
spec:
  rules:
  - host: s4.local
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: s4-nginx
            port:
              number: 80
